--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=springproject
+spring.application.name=spring-project
 
 spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.username=root
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 server.error.include-message=always
 spring.jpa.show-sql=true
+
